@@ -1,54 +1,0 @@
-# vim: tw=60
-%define prefix   /usr
-%define name     dynamite
-%define rel      1
-
-Summary: Extract data compressed with PKWARE Data Compression Library
-Name: %{name}
-Version: YOU_DID_NOT_RUN_THE_BOOTSTRAP_SCRIPT
-Release: %{rel}
-License: MIT
-Group: Applications/Archiving
-Source: %{name}-%{version}.tar.gz
-URL: http://synce.sourceforge.net/
-Distribution: SynCE RPM packages
-Vendor: The SynCE Project
-Packager: David Eriksson <twogood@users.sourceforge.net>
-Buildroot: %{_tmppath}/%{name}-%{version}-%{release}-root
-
-%description
-See http://synce.sourceforge.net/ for more information.
-
-%package devel
-Summary:  Extract data compressed with PKWARE Data Compression Library
-Group:    Development/Libraries
-Requires: %{name} = %{version}
-
-%description devel
-See http://synce.sourceforge.net/ for more information.
-
-%prep
-rm -rf $RPM_BUILD_ROOT
-%setup
-
-%build
-%configure
-make
-
-%install
-%makeinstall
-
-%files
-%defattr(-,root,root)
-%doc LICENSE
-%{_bindir}/dynamite
-%{_libdir}/libdynamite.so.*
-
-%files devel
-%defattr(-,root,root)
-%{_includedir}/libdynamite.h
-%{_libdir}/libdynamite.so
-%{_libdir}/libdynamite.a
-%{_libdir}/libdynamite.la
-%{_datadir}/aclocal
-
