@@ -1,7 +1,0 @@
-*.la
-*.lo
-.deps
-.libs
-Makefile
-Makefile.in
-stamp-h1
