@@ -1,9 +1,0 @@
-*.la
-*.lo
-.deps
-.libs
-Makefile
-Makefile.in
-stamp-h1
-dynamite
-queen_extract
