@@ -1,3 +1,15 @@
+2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>
+
+	* VERSION: Upped the version number.
+
+	* .cvsignore,
+	  cvsclean,
+	  lib/.cvsignore,
+	  src/.cvsignore: Removed useless CVS files.
+
+	* bootstrap,
+	  dynamite.spec.in: Removed spec file.
+
 2008-01-09  Mark Ellis  <mark@mpellis.org.uk>
 
 	* added LICENSE to EXTRA_DIST
